--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,8 @@
 .App-intro {
   font-size: large;
 }
-.heartbeat{
-	-webkit-animation: heartbeat 1s infinite; /* Safari 4.0 - 8.0 */
-    heartbeat: mymove 1s infinite;
+body{
+	background-color:#2eb1ff;
 }
 @keyframes heartbeat{
   0% { transform: scale(0.7,0.7); }
@@ -131,12 +130,13 @@
 	#user_name{
 	}
 	#content{
+		padding-top:4em;
 		position:absolute;
 		z-index:0;
 		width:100%;
 		height:100%;
-		background:#2eb1ff;
 	}
+
 	#logo{
 		top:0;
 		left:0;
@@ -147,8 +147,9 @@
 		margin:10em auto;
 	}
 	#contentUser{
-		margin-top:4em;
 		transition: padding-left 0.75s ease;
+		overflow-y: scroll;
+		height:100%;
 	}
 	#user_big_thumb{
 		width:7.8em;
@@ -160,6 +161,53 @@
 		height:9em;
 		width:23em;
 		padding:0.5em;
+		float:left;
+	}
+	.selectSignals{
+		border: 2px solid rgb(200, 227, 235);
+		font-size:1.2em;
+		height:9em;
+		width:5.3em;
+		background: #343a40!important;
+		float:left;
+	}
+	.selector{
+		background:rgb(240, 240, 240);
+		border: 2px solid rgb(200, 227, 235);
+		font-size:1.2em;
+		height:9em;
+		/*width:28.35em;*/
+		width:13.76em;
+		float:left;
+		margin-left:0.85em;
+	}
+	.gamesTb{
+		font-size: 0.8em;
+	}
+	.gamesTb thead{
+		height: 1em;
+	}
+	.gamesTbthead tr{
+		display:block;
+	}
+	.gamesTb tbody{
+		width:100%;
+	}
+
+	.wrapper1{
+	
+	}
+	.wrapper2{
+		margin-left:1em;
+	}
+	.wp{
+		width:34em;
+		height:20em;
+		overflow-y: auto;
+		margin-top:1em;
+		float:left;
+		background:rgb(240, 240, 240);
+		border: 2px solid rgb(200, 227, 235);
 	}
 	#userPInfo h1{
 		font-size:1.2em;
@@ -197,5 +245,25 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
+    background: #444444; 
+}
+
+.wp::-webkit-scrollbar {
+    width: 1.2em;
+	background:rgb(240, 240, 240);
+} 
+/* Track */
+.wp::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
+ 
+/* Handle */
+.wp::-webkit-scrollbar-thumb {
+    background: rgb(98, 107, 114); 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.wp::-webkit-scrollbar-thumb:hover {
     background: #497fac; 
 }
